feat: #241の定義Draftを実装する ✨
